trying to fix circle on mobile

--- a/style.css
+++ b/style.css
@@ -395,6 +395,11 @@ a:hover {
         flex: 100%;
     }
 
+    .headshot-image-wrapper {
+        /* max-width: 100%; */
+        overflow-y: clip; 
+    
+
     .about-grid-item,
     .projects-grid-item, 
     .socials-container,
